Added Tracking to newsletter

--- a/application/views/users/emails/newsletter.html
+++ b/application/views/users/emails/newsletter.html
@@ -2,12 +2,13 @@
     <img src="http://swiftintern.com/users/track/newsletter/{echo $newsletter->id}">
     <img src="http://www.google-analytics.com/collect?v=1&tid=UA-49272936-3&cid=1&t=event&ec=email&ea=open&el=1&cs={echo $newsletter->user_group}&cm=email&cn=newsletter&cm1=1">
 {/if}
-<img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
+<img src="http://assets.swiftintern.com/images/newsletter/header.png" style="width:100%;"><br>
 <br>
 {$message->body}
 <br>
 Regards,<br>
 Saud Akhtar<br>
 +91-9891048495<br>
+Marketing Head at Swiftintern.com<br>
 <br>
 We are on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
