Removed App Download Link

--- a/application/views/organizations/placementpapers.html
+++ b/application/views/organizations/placementpapers.html
@@ -47,14 +47,14 @@
                 </div>
             </div>
 
-            <div class="panel panel-default">
+            <!--<div class="panel panel-default">
                 <div class="panel-heading">
                     <i class="fa fa-mobile"></i> Placement Updates App
                 </div>
                 <div class="panel-body text-center">
                     <a href="https://play.google.com/store/apps/details?id=com.swiftintern.placement" target="_blank"><img src="{echo CDN}images/others/google_play.png" title="Placement Updates"></a>
                 </div>
-            </div>
+            </div>-->
 
         </aside>
     </div>
