--- a/application/views/admin/crmLead.html
+++ b/application/views/admin/crmLead.html
@@ -4,7 +4,8 @@
         {if isset($success)}
         <div class="alert alert-success alert-dismissible fade in" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-            Lead Email Sent <strong>Successfully!</strong> click <a href="/admin/crmManage">here</a> for status
+            Lead Email Sent <strong>Successfully!</strong> click <a href="/admin/crmManage">here</a> for status.<br>
+            {$success}
         </div>
         {/if}
         <form class="form-horizontal col-md-offset-1 col-lg-8" method="post" action="" enctype="multipart/form-data">
