--- a/application/views/admin/data.html
+++ b/application/views/admin/data.html
@@ -6,28 +6,38 @@
                 <div class="input-group">
                     <label class="sr-only">Model</label>
                     <select name="model" id="item" class="form-control">
-                        <option value="user">Users</option>
-                        <option value="work">Works</option>
-                        <option value="transaction">Transactions</option>
-                        <option value="test">Test</option>
-                        <option value="sponsored">Sponsoreds</option>
-                        <option value="social">Social</option>
-                        <option value="rsvp">RSVPs</option>
-                        <option value="resume">Resumes</option>
-                        <option value="question">Questions</option>
-                        <option value="qualification">Qualifications</option>
-                        <option value="photograph">Photographs</option>
-                        <option value="participant">Participants</option>
-                        <option value="organization">Organizations</option>
-                        <option value="order">Orders</option>
-                        <option value="opportunity">Opportunities</option>
-                        <option value="message">Messages</option>
-                        <option value="member">Members</option>
-                        <option value="follow">Followers</option>
-                        <option value="experience">Experiences</option>
-                        <option value="certificate">Certificates</option>
-                        <option value="blog">Blog Posts</option>
+                        <option value="answer">Answers</option>
                         <option value="application">Applications</option>
+                        <option value="bankaccount">BankAccounts</option>
+                        <option value="blog">BlogPosts</option>
+                        <option value="certificate">Certificates</option>
+                        <option value="conversation">Conversations</option>
+                        <option value="crm">CRM Templates</option>
+                        <option value="experience">Experiences</option>
+                        <option value="follow">Followers</option>
+                        <option value="image">Images</option>
+                        <option value="lead">Leads</option>
+                        <option value="member">Members</option>
+                        <option value="message">Messages</option>
+                        <option value="meta">Metas</option>
+                        <option value="newsletter">Newsletters</option>
+                        <option value="opportunity">Opportunities</option>
+                        <option value="option">Options</option>
+                        <option value="order">Orders</option>
+                        <option value="organization">Organizations</option>
+                        <option value="participant">Participants</option>
+                        <option value="photograph">Photographs</option>
+                        <option value="qualification">Qualifications</option>
+                        <option value="question">Questions</option>
+                        <option value="resume">Resumes</option>
+                        <option value="rsvp">RSVPs</option>
+                        <option value="social">Social</option>
+                        <option value="sponsored">Sponsoreds</option>
+                        <option value="student">Students</option>
+                        <option value="test">Test</option>
+                        <option value="transaction">Transactions</option>
+                        <option value="user" selected="selected">Users</option>
+                        <option value="work">Works</option>
                     </select>
                 </div>
             </div>
