--- a/application/views/students/register.html
+++ b/application/views/students/register.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">Internships, Training and Competitions</h4>
-                    <p>An internship isn't just any temporary job. It can be a bridge to your life's work or an experiment in a career that interests you. Well this is the place to start.</p>
+                    <p>An internship isnt just any temporary job. It can be a bridge to your lifes work or an experiment in a career that interests you. Well this is the place to start.</p>
                 </div>
             </div>
             <br>
@@ -19,7 +19,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">Experiences</h4>
-                    <p>Share youe Interview experience, Internship Experience and also broswse through thousands of students experiences through our App.</p>
+                    <p>Share your Interview experience, Internship Experience and also broswse through thousands of students experiences through our App.</p>
                 </div>
             </div>						
             <br>
