--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -64,11 +64,11 @@
                         <i class="fa fa-search"></i> Advanced Search
                     </div>
                     <form id="search_opportunities" class="panel-body">
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <label>Search Term</label>
                             <input type="search" name="query" class="form-control" placeholder="What are you looking for?" value="" autocomplete="off">
                             <small class="help-block"></small>
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label>Location</label>
                             <select data-placeholder="Select Place" name="location" class="form-control chosen">
