--- a/application/views/admin/search.html
+++ b/application/views/admin/search.html
@@ -49,6 +49,15 @@
             </div>
             <div class="form-group">
                 <div class="input-group">
+                    <label class="sr-only">Sign</label>
+                    <select name="sign" class="form-control" value="{$sign}">
+                        <option value="equal">Equal</option>
+                        <option value="like">Like</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
                     <label class="sr-only">Keyword</label>
                     <input type="text" style="width: 300px" name="value" class="form-control" placeholder="value..." value="{$val}" />
                 </div>
