Improved OnlineTest UX

--- a/application/views/onlinetest/index.html
+++ b/application/views/onlinetest/index.html
@@ -32,8 +32,8 @@
                                         <div class="caption">
                                             <p><b>{echo substr($exam->title, 0, 21)}</b></p>
                                             <p>
-                                                <a href="/onlinetest/details/{echo \Framework\StringMethods::url($exam->title)}/{echo $exam->id}" class="btn btn-primary">Details</a> 
-                                                <a href="/onlinetest/test/{echo \Framework\StringMethods::url($exam->title)}/{echo $exam->id}" class="btn btn-success" id="taketest">Start Test</a>
+                                                <a href="/onlinetest/details/{echo \Framework\StringMethods::url($exam->title)}/{echo $exam->id}" class="btn btn-primary btn-xs">Details</a> 
+                                                <a href="/onlinetest/test/{echo \Framework\StringMethods::url($exam->title)}/{echo $exam->id}" class="btn btn-success btn-xs">Start Test</a>
                                             </p>
                                         </div>
                                     </div>
