--- a/application/views/users/emails/studentRegister.html
+++ b/application/views/users/emails/studentRegister.html
@@ -3,7 +3,7 @@
 {$user->name}, you have made a great decision! We dont need to tell you how critical an internship is to your future success - you already know.<br>
 Here are two easy ways for you to get started:<br>
 <ol type="1">
-        <li><a href="http://swiftintern.com/resume">Create a Resume</a>. Upload your existing resume or use our easy resume builder to create a new one.</li>
+        <li><a href="http://swiftintern.com/resumes">Create a Resume</a>. Upload your existing resume or use our easy resume builder to create a new one.</li>
         <li><a href="http://swiftintern.com/onlinetest">Add Certification</a>. Appear for an online test and if you pass it certification will be provided to your profile on linkedin and swiftintern</li>
 </ol>
 <br>
