--- a/application/views/employer/messages.html
+++ b/application/views/employer/messages.html
@@ -1,6 +1,71 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">Messages</h1>
-        Under Development
+        <p id="status"></p>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <ul class="nav nav-tabs nav-justified" role="tablist" id="myTab">
+                <li class="active"><a href="#inbox" role="tab" data-toggle="tab">Inbox</a></li>
+                <li><a href="#outbox" role="tab" data-toggle="tab">Outbox</a></li>
+            </ul> 
+            <div class="tab-content">
+                <div class="tab-pane active" id="inbox">
+                    <div class="panel panel-default">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>From</th>
+                                    <th>Message</th>
+                                    <th>Received at</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody id="to_user_id">
+                            {foreach $inbox in $allinbox}
+                                <tr>
+                                    <td>{echo $inbox->from}</td>
+                                    <td>{echo $inbox->message}</td>
+                                    <td><small>{echo $inbox->received}</small></td>
+                                    <td>
+                                        <button name="message" data-user_id="{echo $inbox->sender_id}" class="btn btn-warning btn-xs"><i class="fa fa-envelope fa-fw"></i> Message</button> 
+                                    </td>
+                                </tr>
+                            {/foreach}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="text-center"><button id="loadmorebtn_to_user_id" onclick="loadmoreMessages(++inbox, 'to_user_id', '{ echo $user->id}')" class="btn btn-primary">Load More</button></div>
+                </div>
+                <div class="tab-pane" id="outbox">
+                    <div class="panel panel-default">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>To</th>
+                                    <th>Message</th>
+                                    <th>Sent at</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody id="from_user_id">
+                            {foreach $outbox in $alloutbox}
+                                    <tr>
+                                        <td>{echo $outbox->to}</td>
+                                        <td>{echo $outbox->message}</td>
+                                        <td><small>{echo $outbox->sent}</small></td>
+                                        <td>
+                                            <button name="message" data-user_id="{echo $outbox->receiver_id}" class="btn btn-warning btn-xs"><i class="fa fa-envelope fa-fw"></i> Message</button>  
+                                        </td>
+                                    </tr>
+                            {/foreach}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="text-center"><button id="loadmorebtn_from_user_id" onclick="loadmoreMessages(++outbox, 'from_user_id', '{echo $user->id}')" class="btn btn-primary">Load More</button></div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
