--- a/application/views/users/emails/message.html
+++ b/application/views/users/emails/message.html
@@ -1,4 +1,4 @@
-{$name} sent you a message. <br>
+{$user->name} sent you a message. <br>
 ######################################################<br>
 {$message->body}<br>
 ######################################################<br>
