--- a/application/views/users/emails/employerApplicants.html
+++ b/application/views/users/emails/employerApplicants.html
@@ -1,9 +1,9 @@
 Hi,<br>
-The Following Students Have Applied to Opportunity (Internship) yesterday which you have Posted on Swiftintern.com, You are Requested to go through their application and select or reject them within 15 days starting from today.<br>
+Students Have Applied to Internship which you have Posted on Swiftintern.com, You are Requested to go through their application and select or reject them within 15 days starting from today.<br>
 We will notify them with Results. you can contact them also by viewing their profile through email or phone from <a href="http://swiftintern.com/employer/register">employer</a> dashboard.<br>
 <br>
 <ul>
-    <li>Internship : <a href="http://swiftintern.com/{Framework\StringMethods::url($opportunity->title)}/{$opportunity->id}"><b>{$opportunity->title}</b></a></li>
+    <li>Internship : <a href="http://swiftintern.com/{echo Framework\StringMethods::url($opportunity->title)}/{$opportunity->id}"><b>{$opportunity->title}</b></a></li>
     <li>New Applications : <b>{$applicants}</b></li>
 </ul>
 <br>
