--- a/application/views/users/emails/newsletter.html
+++ b/application/views/users/emails/newsletter.html
@@ -11,4 +11,5 @@ Saud Akhtar<br>
 +91-9891048495<br>
 Marketing Head at Swiftintern.com<br>
 <br>
-We are on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
+We are on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.<br>
+Click <a href="http://swiftintern.com/users/unsubscribe">here</a> to unsubscribe.
