--- a/application/views/users/emails/leadGeneration.html
+++ b/application/views/users/emails/leadGeneration.html
@@ -2,8 +2,6 @@
 <br>
 Thanks and Regards,<br>
 {echo $user->name}<br>
-Marketing Department<br>
 {echo $user->phone}<br>
 www.swiftintern.com<br>
-SwiftDeal Online LLP<br>
-Facebook : <a href="http://facebook.com/swiftintern" target="_blank">http://facebook.com/swiftintern</a>
+SwiftDeal Online LLP, New Delh, India<br>
