Auto Unsubscribe from MailGun

--- a/application/views/users/emails/leadGeneration.html
+++ b/application/views/users/emails/leadGeneration.html
@@ -4,4 +4,4 @@ Thanks and Regards,<br>
 {echo $user->name}<br>
 {echo $user->phone}<br>
 www.swiftintern.com<br>
-SwiftDeal Online LLP, New Delh, India<br>
+SwiftDeal Online LLP, New Delhi, India<br>
