Update Download Method

--- a/application/views/resumes/success.html
+++ b/application/views/resumes/success.html
@@ -46,7 +46,7 @@
                 <p>We have registered your account with us and emailed you the details. Check your Email.</p>
                 <p>
                     <a href="/students" id="editresume" class="btn btn-primary"><i class="fa fa-edit fa-fw"></i> Edit/Save Resume</a>
-                    <a href="/resumes/save" id="download" class="btn btn-success"><i class="fa fa-download fa-fw"></i> Download Resume</a>
+                    <a href="/resumes/download" id="download" class="btn btn-success"><i class="fa fa-download fa-fw"></i> Download Resume</a>
                     <a href="/contact" class="btn btn-warning"><i class="fa fa-comment fa-fw"></i> Feedback</a>
                 </p>
             </div>
