Created Partners Page

--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -86,7 +86,7 @@
                 
                 <!--<div class="panel panel-default">
                     <div class="panel-heading">
-                        <i class="fa fa-facebook-square"></i> Like us on FaceBook
+                        <i class="fa fa-comments"></i> Testimonials
                     </div>
                     <div class="panel-body">
                         
