--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -148,9 +148,9 @@
         </div>
             <hr>
             <p>
-                <button class="whitetext btn btn-success btn-xs" name="message" value=""><i class="fa fa-comments-o fa-fw"></i> Got a Question?</button>
+                <!--<button class="whitetext btn btn-success btn-xs" name="message" value=""><i class="fa fa-comments-o fa-fw"></i> Got a Question?</button>-->
                 <span class="pull-right">
-                    <a href="http://www.swiftdealonline.com/" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
+                    <a href="http://www.swiftdeal.org/" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
                 </span>
             </p>
             <p class="text-center">
